fixes #51 of covering DOM elements when going back to home page

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -45,7 +45,8 @@ body {
 .slider {
     border: 15px solid #FFFFFF;
     border-radius: 5px;
-    height: 50%;
+    height: 75%;
+    min-height: 500px;
     margin: 20px auto;
     position: relative;
     width: 800px;
